<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:background="@color/colorMaroon"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/CustomPopupStyle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-light"
            android:text="@string/app_name"
            android:textColor="@color/colorYellow"
            android:textSize="24sp" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_toolbar"
        app:layout_constraintVertical_bias="1.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="16dp">

            <ImageView
                android:id="@+id/login_user_image"
                android:layout_width="115dp"
                android:layout_height="115dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/image_desc"
                android:src="@drawable/baseline_local_library_24"
                android:tint="@color/colorRed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_user_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/colorMaroon" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_username_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/error_message"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_user_image">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/login_username_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:hint="@string/edit_profile_username"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorBlack"
                    android:textSize="19sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_username_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_username_layout">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/login_password_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:hint="@string/edit_profile_password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorBlack"
                    android:textSize="19sp" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/to_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_password_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="navigateToSignUp"
                android:text="@string/sign_up"
                android:textColor="@color/colorRed"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_password_layout" />

        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="signIn"
        android:paddingTop="11dp"
        android:paddingBottom="11dp"
        android:text="@string/login"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/spinner"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>